# inky

./: .gitignore  README.md  install.sh  pyproject.toml  specifications.md
inx/: inky_chat.inx  inky_explain.inx  inky_generate.inx  inky_modify.inx
src/inky/: __init__.py
src/inky/api/: __init__.py  client.py
src/inky/auth/: __init__.py  oauth.py  server.py  token_store.py
src/inky/extensions/: __init__.py  chat.py  explain.py  generate.py  modify.py
src/inky/ui/: chat_window.py
src/inky/utils/: svg.py
