[project]
name = "inky"
version = "0.1.0"
description = "Inkscape extension that integrates Claude AI for SVG generation, modification, and analysis"
readme = "README.md"
authors = [
    { name = "rafa", email = "rafal.kuka94@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
